force-app/main/default/objects/ssot__ActionPlanTemplate__dlm/fields/ssot__IsAdHocItemCreationEnabled__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAdHocItemCreationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ad Hoc Item Creation Enabled</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAdHocItemCreationEnabled</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>