force-app/main/default/objects/ssot__ActionPlanTemplate__dlm/fields/ssot__rel_1719818622991_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818622991_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanTemplate_TargetEntityTypeI_rel</label>
    <referenceTo>ssot__ApplicationDecision__dlm</referenceTo>
    <relationshipLabel>ActionPlanTemplate_TargetEntityTypeI_rel</relationshipLabel>
    <relationshipName>rel_1719818622991_end</relationshipName>
    <type>Lookup</type>
</CustomField>