force-app/main/default/objects/ssot__ActionPlanTemplate__dlm/fields/ssot__ShouldShowOnLearnerPortal__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShouldShowOnLearnerPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should Show On Learner Portal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShouldShowOnLearnerPortal</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>