force-app/main/default/objects/ssot__ActionPlanTemplate__dlm/fields/ssot__TargetEntityTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetEntityTypeId__c</fullName>
    <label>Target Entity Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetEntityTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>