force-app/main/default/objects/ssot__ActionPlanTemplate__dlm/fields/ssot__TargetEntityTypeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetEntityTypeObject__c</fullName>
    <label>Target Entity Type Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetEntityTypeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>