force-app/main/default/objects/ssot__ActionPlanTemplate__dlm/fields/ssot__UniqueNameText__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueNameText__c</fullName>
    <label>UniqueName</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueNameText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>